working on doxygen

--- a/doc/latex/classRayBenConvection.tex
+++ b/doc/latex/classRayBenConvection.tex
@@ -130,55 +130,55 @@ double {\bfseries m\+\_\+\+Gr}
 \item 
 \mbox{\Hypertarget{classRayBenConvection_a0369de1dcfd6a9c4681a22ef77281bad}\label{classRayBenConvection_a0369de1dcfd6a9c4681a22ef77281bad}} 
 Eigen\+::\+Matrix$<$ double, \mbox{\hyperlink{classRayBenConvection_a00ece8699bc4531e4dc5edfe2cfcfd7b}{m\+\_\+nx}}, \mbox{\hyperlink{classRayBenConvection_aa2e29e985716895f8f19e3930078ec00}{m\+\_\+ny}} $>$ {\bfseries m\+\_\+\+Tstar}
-\item 
+\begin{DoxyCompactList}\small\item\em Eigen matrix used for perturbative calculation. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_a22bceb43d4d9ba695f21bf1306a8f354}\label{classRayBenConvection_a22bceb43d4d9ba695f21bf1306a8f354}} 
 Eigen\+::\+Matrix$<$ double, \mbox{\hyperlink{classRayBenConvection_a00ece8699bc4531e4dc5edfe2cfcfd7b}{m\+\_\+nx}}+1, \mbox{\hyperlink{classRayBenConvection_aa2e29e985716895f8f19e3930078ec00}{m\+\_\+ny}} $>$ {\bfseries m\+\_\+ustar}
-\item 
+\begin{DoxyCompactList}\small\item\em Eigen matrix used for perturbative calculation. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_ab1204d12009f19080daa8e48072854cd}\label{classRayBenConvection_ab1204d12009f19080daa8e48072854cd}} 
 Eigen\+::\+Matrix$<$ double, \mbox{\hyperlink{classRayBenConvection_a00ece8699bc4531e4dc5edfe2cfcfd7b}{m\+\_\+nx}}+1, \mbox{\hyperlink{classRayBenConvection_aa2e29e985716895f8f19e3930078ec00}{m\+\_\+ny}} $>$ {\bfseries m\+\_\+uhalf}
-\item 
+\begin{DoxyCompactList}\small\item\em Eigen matrix used for perturbative calculation. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_a316a9e7f0c079b6fba771d7b15bd6647}\label{classRayBenConvection_a316a9e7f0c079b6fba771d7b15bd6647}} 
 Eigen\+::\+Matrix$<$ double, \mbox{\hyperlink{classRayBenConvection_a00ece8699bc4531e4dc5edfe2cfcfd7b}{m\+\_\+nx}}+1, \mbox{\hyperlink{classRayBenConvection_aa2e29e985716895f8f19e3930078ec00}{m\+\_\+ny}} $>$ {\bfseries m\+\_\+uconv}
-\item 
+\begin{DoxyCompactList}\small\item\em Eigen matrix used for perturbative calculation. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_a8e8d1bec9c3fbd2876adc957f4ed767d}\label{classRayBenConvection_a8e8d1bec9c3fbd2876adc957f4ed767d}} 
 Eigen\+::\+Matrix$<$ double, \mbox{\hyperlink{classRayBenConvection_a00ece8699bc4531e4dc5edfe2cfcfd7b}{m\+\_\+nx}}, \mbox{\hyperlink{classRayBenConvection_aa2e29e985716895f8f19e3930078ec00}{m\+\_\+ny}}+1 $>$ {\bfseries m\+\_\+vstar}
-\item 
+\begin{DoxyCompactList}\small\item\em Eigen matrix used for perturbative calculation. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_aeada1a30f797e981b52d3b4e0640b198}\label{classRayBenConvection_aeada1a30f797e981b52d3b4e0640b198}} 
 Eigen\+::\+Matrix$<$ double, \mbox{\hyperlink{classRayBenConvection_a00ece8699bc4531e4dc5edfe2cfcfd7b}{m\+\_\+nx}}, \mbox{\hyperlink{classRayBenConvection_aa2e29e985716895f8f19e3930078ec00}{m\+\_\+ny}}+1 $>$ {\bfseries m\+\_\+vhalf}
-\item 
+\begin{DoxyCompactList}\small\item\em Eigen matrix used for perturbative calculation. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_a2e5088ea41b7faad0bcc9bfda83939ef}\label{classRayBenConvection_a2e5088ea41b7faad0bcc9bfda83939ef}} 
 Eigen\+::\+Matrix$<$ double, \mbox{\hyperlink{classRayBenConvection_a00ece8699bc4531e4dc5edfe2cfcfd7b}{m\+\_\+nx}}, \mbox{\hyperlink{classRayBenConvection_aa2e29e985716895f8f19e3930078ec00}{m\+\_\+ny}}+1 $>$ {\bfseries m\+\_\+vconv}
-\item 
+\begin{DoxyCompactList}\small\item\em Eigen matrix used for perturbative calculation. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_aeb469e88e053251916cbcf2e0dd1919a}\label{classRayBenConvection_aeb469e88e053251916cbcf2e0dd1919a}} 
 double {\bfseries m\+\_\+\+TnE} = 0
-\item 
+\begin{DoxyCompactList}\small\item\em implementation detail. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_a643232d08102a38ddd0ec9a618b55afd}\label{classRayBenConvection_a643232d08102a38ddd0ec9a618b55afd}} 
 double {\bfseries m\+\_\+\+TnW} = 0
-\item 
+\begin{DoxyCompactList}\small\item\em implementation detail. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_aab15fee9f0b6d470dd9d02d85439a7a8}\label{classRayBenConvection_aab15fee9f0b6d470dd9d02d85439a7a8}} 
 double {\bfseries m\+\_\+\+UN} = 0
-\item 
+\begin{DoxyCompactList}\small\item\em implementation detail. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_a99f0d9ab29a2db33829175a790fa9bc7}\label{classRayBenConvection_a99f0d9ab29a2db33829175a790fa9bc7}} 
 double {\bfseries m\+\_\+\+US} = 0
-\item 
+\begin{DoxyCompactList}\small\item\em implementation detail. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_ad3b4ec6a6500a9b9355c60d66a62091b}\label{classRayBenConvection_ad3b4ec6a6500a9b9355c60d66a62091b}} 
 double {\bfseries m\+\_\+\+UE} = 0
-\item 
+\begin{DoxyCompactList}\small\item\em implementation detail. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_a56534034d797d9099f53367d4828f0c7}\label{classRayBenConvection_a56534034d797d9099f53367d4828f0c7}} 
 double {\bfseries m\+\_\+\+UW} = 0
-\item 
+\begin{DoxyCompactList}\small\item\em implementation detail. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_ace7b32dda44cace25edfe8e481601733}\label{classRayBenConvection_ace7b32dda44cace25edfe8e481601733}} 
 double {\bfseries m\+\_\+\+VN} = 0
-\item 
+\begin{DoxyCompactList}\small\item\em implementation detail. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_afc0d1ada59367f173257a20e2cea845b}\label{classRayBenConvection_afc0d1ada59367f173257a20e2cea845b}} 
 double {\bfseries m\+\_\+\+VS} = 0
-\item 
+\begin{DoxyCompactList}\small\item\em implementation detail. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_abfccbde057005c07f8ee2b76ef68e4f7}\label{classRayBenConvection_abfccbde057005c07f8ee2b76ef68e4f7}} 
 double {\bfseries m\+\_\+\+VE} = 0
-\item 
+\begin{DoxyCompactList}\small\item\em implementation detail. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_aee29299c3f2cf435a3d179d4dcd9b0a1}\label{classRayBenConvection_aee29299c3f2cf435a3d179d4dcd9b0a1}} 
 double {\bfseries m\+\_\+\+VW} = 0
-\item 
+\begin{DoxyCompactList}\small\item\em implementation detail. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRayBenConvection_ab25ed57d64bce95a1f0b385151be1a41}\label{classRayBenConvection_ab25ed57d64bce95a1f0b385151be1a41}} 
 Eigen\+::\+Matrix$<$ double, \mbox{\hyperlink{classRayBenConvection_a00ece8699bc4531e4dc5edfe2cfcfd7b}{m\+\_\+nx}}-\/1, \mbox{\hyperlink{classRayBenConvection_aa2e29e985716895f8f19e3930078ec00}{m\+\_\+ny}}-\/2 $>$ {\bfseries m\+\_\+bcu}
 \item 
@@ -350,10 +350,7 @@ The parameter inserted by the user are thoughtfully checked to ensure the validi
 
 height of the box of the simulation. 
 
-\begin{DoxySeeAlso}{See also}
-\mbox{\hyperlink{classRayBenConvection_a018296501774061a9fc4d07ee3ccc684}{m\+\_\+L}} 
-\end{DoxySeeAlso}
-\mbox{\Hypertarget{classRayBenConvection_a018296501774061a9fc4d07ee3ccc684}\label{classRayBenConvection_a018296501774061a9fc4d07ee3ccc684}} 
+The ratio of m\+\_\+H and m\+\_\+L is an important physical parameter for the simulation, which influences all other parameters, such as m\+\_\+\+Pr, m\+\_\+\+Re, m\+\_\+\+Ra. Since it is not possible to forsee how changing this ratio will modify the other parameters, the user must not have access to m\+\_\+H and m\+\_\+L. \mbox{\Hypertarget{classRayBenConvection_a018296501774061a9fc4d07ee3ccc684}\label{classRayBenConvection_a018296501774061a9fc4d07ee3ccc684}} 
 \index{RayBenConvection@{RayBenConvection}!m\_L@{m\_L}}
 \index{m\_L@{m\_L}!RayBenConvection@{RayBenConvection}}
 \doxysubsubsection{\texorpdfstring{m\_L}{m\_L}}
@@ -363,7 +360,10 @@ height of the box of the simulation.
 
 lenght of the box of the simulation. 
 
-The ratio of m\+\_\+H and m\+\_\+L is an important physical parameter for the simulation, which influences all other parameters, such as m\+\_\+\+Pr, m\+\_\+\+Re, m\+\_\+\+Ra. Since it is not possible to forsee how changing this ratio will modify the other parameters, the user must not have access to m\+\_\+H and m\+\_\+L. 
+\begin{DoxySeeAlso}{See also}
+\mbox{\hyperlink{classRayBenConvection_a500821275948ffaeb5dbac835f618515}{m\+\_\+H}} 
+\end{DoxySeeAlso}
+
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
